--- a/fe-1/styles/globals.css
+++ b/fe-1/styles/globals.css
@@ -8,6 +8,10 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
 		Helvetica Neue, sans-serif;
 }
+.is-active {
+	opacity: 1;
+	background-color: darkgray !important;
+}
 
 a {
 	color: inherit;
