--- a/fe-1/styles/globals.css
+++ b/fe-1/styles/globals.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+	h1 {
+		@apply text-2xl;
+	}
+	h2 {
+		@apply text-xl;
+	}
+	h3 {
+		@apply text-lg;
+	}
+	ol > li {
+		@apply list-decimal;
+	}
+	ul > li {
+		@apply list-disc;
+	}
+}
 html,
 body {
 	padding: 0;
